1.1 updated